remove import of nio